@@ -3,6 +3,7 @@ From version 0.3.9 to 0.3.10
 - minor update for GNU conventions.
 - moved more stack configuration into base object.
 - revised periodic stats processing and logging.
+- server control "swig" support, starting with python.
 
 From version 0.3.8 to 0.3.9
 - man page for daemon admin support shell utility.
